--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
                 body: JSON.stringify({"url":url})
             });
         }
+
+        function stopMusic(){
+            fetch('http://192.168.18.171:3333/stopMusic', {
+                method: 'GET'
+            });
+        }
     </script>
 </head>
 <body>
@@ -26,5 +32,6 @@
 </form>
 <input id="music" style="width: 600px"></br></br>
 <button id="playMusic" onclick="sendMusic()">Pusti muziku</button>
+<button onclick="stopMusic()">Ugasi muziku</button>
 </body>
 </html>
