--- a/index.html
+++ b/index.html
@@ -8,56 +8,144 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>ISUM MUSIC </title>
     <style>
-        * {
-            text-align: center;
-            padding: 0;
-            margin: 0;
-            font-family: 'Red Hat Display', sans-serif;
+        :root{
+            --small: 35px;
+            --medium: 50px;
+            --large: 65px;
+            --bar-height:10px;
         }
 
-        body {
-            background-color: #383737;
+        body{
+            font-family:'Red Hat Display', sans-serif;
+            user-select:none;
+            padding:0;
+            margin:0;
+            background: rgb(149,1,193);
+            background: rgba(0, 0, 0, 0.95);
         }
-
         h1 {
-            margin: 1em auto;
-            font-size: 3rem;
-            color: whitesmoke;
-        }
-
-        input {
-            padding: 1rem;
-            /*outline: 2px solid red;*/
-            border-radius: 3px;
-            border-color: transparent;
-            margin: 1rem;
-        }
-
-        button {
-            margin: 1rem;
-            padding: 10px;
-            font-size: 10px;
-            background-color: rgb(56, 55, 55);
-            border-radius: 10px;
-            border-color: transparent;
+            text-align: center;
+            font-size: 8rem;
             color: white;
-            transition: 500ms;
+        }
+        #overlay{
+            position:absolute;
+            top:0;
+            left:0;
+            bottom:0;
+            right:0;
+            z-index:9999;
+            display:none;
+        }
+        .container{
+            height:100vh;
+        }
+        .player{
+            border-radius: 20px;
+            width: 500px;
+            height: 350px;
+            position: absolute;
+            top:calc(50% - 175px);
+            left:calc(50% - 250px);
+            box-shadow:6px 6px 15px rgba(51,51,51,0.5);
+            overflow:hidden;
+            background:#fff;
+        }
+        .player #music-info{
+            padding: 15px;
+            background-image:url("https://www.metropolitan.ac.rs/files/2018/11/logo-01-crveni.png");
+            height: 238px;
+            background-repeat:no-repeat;
+            background-size: 100%;
+            color: #fff;
+        }
+        .player #music-info .title{
+            font-size: 23px;
+            margin-bottom: 8px;
+            z-index:1;
+        }
+        .player #music-info .bg{
+            width: 100%;
+            box-shadow: 0 -100px 100px 100px rgba(0,0,0,0.5);
+        }
+        .player #music-info .author{
+            font-size: 14px;
+            float: right;
+        }
+        .player #music-info .album{
+            font-size: 14px;
+        }
+        .player .timestamp{
+            position: absolute;
+            width: 100%;
+            bottom: 110px;
+        }
+        .player .timestamp #bar{
+            width: 100%;
+            height: var(--bar-height);
+            background: #bbb;
+        }
+        .player .timestamp #current-time{
+            position:absolute;
+            left: 0;
+            bottom: 0;
+            width: 0;
+            height: var(--bar-height);
+            background: #5453af;
+            pointer-events:none;
+        }
+        .player .timestamp #current-time:after{
+            content:"";
+            width: 16px;
+            height: 16px;
+            background: #5453af;
+            position: absolute;
+            right: -8px;
+            bottom: -4px;
+            z-index: 9;
+            border-radius: 50%;
+            box-shadow: 0 0 3px 2px #eee;
+        }
+        .player .buttons{
+            position: absolute;
+            backdrop-filter: blur(10px);
+            bottom: 0;
+            border-top: 1px solid #ddd;
+            width:100%;
+            height:110px;
+            display:flex;
+            align-items:center;
+            justify-content:center;
+        }
+        .player .buttons .button{
+            border: 1px solid #d51e1e;
+            border-radius: 50%;
+            text-align:center;
+            margin:7px;
+            color: #333;
+        }
+        .player .buttons .button-small{
+            width: var(--small);
+            height: var(--small);
+            line-height: var(--small);
+        }
+        .player .buttons .button-medium{
+            width: var(--medium);
+            height: var(--medium);
+            line-height: var(--medium);
+            font-size: 25px;
+        }
+        .player .buttons .button-large{
+            width: var(--large);
+            height: var(--large);
+            line-height: var(--large);
+            font-size: 35px;
+        }
+        .player .buttons .button-small:hover, .player .buttons .button-medium:hover, .player .buttons .button-large:hover{
+            background: #5453af;
+            color: #fff;
         }
 
-        button:hover {
-            background-color: white;
-            color: rgb(56, 55, 55);
-            transition: 500ms;
-        }
-
-        .material-icons {
-            font-size: 40px;
-        }
-
-        .volumes{
-            display: flex;
-            justify-content: center;
-        }
     </style>
     <script>
         function volumeUp() {
@@ -84,19 +172,30 @@
     </script>
 </head>
 <body>
-
+<div id="overlay"></div>
 <h1>ISUM MUSIC</h1>
-
-<input id="music" style="width: 600px" placeholder="URL"></br></br>
-<button id="playMusic" onclick="sendMusic()"><i class="material-icons">play_circle_filled</i></button>
-<button onclick="stopMusic()"><i class="material-icons">pause_circle_filled</i></button>
-<div class="volumes">
-    <input id="volume" type="number" placeholder="Volume level">
-    <button onclick="volumeUp()"><i class="material-icons">adjust</i></button>
+<div class="container">
+    <div class="player" id="player">
+        <div id="music-info">
+            <div class="title"></div>
+            <div class="author"></div>
+            <div class="album"></div>
+            <div class="bg"></div>
+        </div>
+        <div class="timestamp">
+            <div id="bar"></div>
+            <div id="current-time">
+            </div>
+        </div>
+        <div class="buttons">
+            <div class="button button-small"><i class="fas fa-random"></i></div>
+            <div class="button button-medium"><i class="fas fa-step-backward"></i></div>
+            <div class="button button-large" id="play" onclick="sendMusic()"><i class="material-icons">play_circle_filled</i></div>
+            <div class="button button-large" id="stop" onclick="stopMusic()"><i class="material-icons">stop</i></div>
+            <div class="button button-medium"><i class="material-icons">skip_next</i></div>
+            <div class="button button-small" id="mute"><i class="fas fa-volume-up"></i></div>
+        </div>
+    </div>
 </div>
-<br>
-
-
-
 </body>
 </html>
