--- a/index.html
+++ b/index.html
@@ -8,97 +8,120 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>ISUM MUSIC </title>
     <style>
-        :root{
-            --small: 35px;
-            --medium: 50px;
-            --large: 65px;
-            --bar-height:10px;
+        :root {
+            --small: 55px;
+            --medium: 55px;
+            --large: 55px;
+            --bar-height: 10px;
+            --gradient: radial-gradient(rgb(59, 28, 31), rgba(35, 25, 25, 0.63));
+            --text: linear-gradient(rgba(145, 63, 63, 0.7), rgba(0,0,0,0.1));
         }
 
-        body{
-            font-family:'Red Hat Display', sans-serif;
-            user-select:none;
-            padding:0;
-            margin:0;
-            background: rgb(149,1,193);
-            background: rgba(0, 0, 0, 0.95);
+
+        @keyframes moving {
+            0%{
+                background-position: left;
+            }
+            100%{
+                background-position: right;
+            }
         }
+
+        body {
+            font-family: 'Red Hat Display', sans-serif;
+            user-select: none;
+            padding: 0;
+            margin: 0;
+            background-image: url("https://cdn.wallpapersafari.com/12/77/iH6nMj.jpg");
+            background-repeat: repeat;
+        }
+
         h1 {
             text-align: center;
             font-size: 8rem;
-            color: white;
+            color: whitesmoke;
+            /*animation: moving 2s infinite alternate;*/
         }
-        #overlay{
-            position:absolute;
-            top:0;
-            left:0;
-            bottom:0;
-            right:0;
-            z-index:9999;
-            display:none;
+
+        #overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            z-index: 9999;
+            display: none;
         }
-        .container{
-            height:100vh;
-        }
-        .player{
+
+        .player {
             border-radius: 20px;
-            width: 500px;
+            width: 700px;
             height: 350px;
             position: absolute;
-            top:calc(50% - 175px);
-            left:calc(50% - 250px);
-            box-shadow:6px 6px 15px rgba(51,51,51,0.5);
-            overflow:hidden;
-            background:#fff;
+            top: calc(50% - 175px);
+            left: calc(50% - 350px);
+            box-shadow: 6px 6px 15px rgba(51, 51, 51, 0.5);
+            overflow: hidden;
+            background: #fff;
         }
-        .player #music-info{
+
+        .player #music-info {
             padding: 15px;
-            background-image:url("https://www.metropolitan.ac.rs/files/2018/11/logo-01-crveni.png");
+            background-image: var(--gradient);
+            animation: moving 1250ms infinite alternate;
             height: 238px;
-            background-repeat:no-repeat;
-            background-size: 100%;
+            background-repeat: no-repeat;
+            background-size: 200%;
             color: #fff;
         }
-        .player #music-info .title{
+
+        .player #music-info .title {
             font-size: 23px;
             margin-bottom: 8px;
-            z-index:1;
+            z-index: 1;
         }
-        .player #music-info .bg{
+
+        .player #music-info .bg {
             width: 100%;
-            box-shadow: 0 -100px 100px 100px rgba(0,0,0,0.5);
+            box-shadow: 0 -100px 100px 100px rgba(0, 0, 0, 0.5);
         }
-        .player #music-info .author{
+
+        .player #music-info .author {
             font-size: 14px;
             float: right;
         }
-        .player #music-info .album{
+
+        .player #music-info .album {
             font-size: 14px;
         }
-        .player .timestamp{
+
+        .player .timestamp {
             position: absolute;
             width: 100%;
             bottom: 110px;
         }
-        .player .timestamp #bar{
+
+        .player .timestamp #bar {
             width: 100%;
             height: var(--bar-height);
             background: #bbb;
         }
-        .player .timestamp #current-time{
-            position:absolute;
+
+        .player .timestamp #current-time {
+            position: absolute;
             left: 0;
             bottom: 0;
             width: 0;
             height: var(--bar-height);
-            background: #5453af;
-            pointer-events:none;
+            background: #08e0fc;
+            pointer-events: none;
         }
-        .player .timestamp #current-time:after{
-            content:"";
+
+        .player .timestamp #current-time:after {
+            content: "";
             width: 16px;
             height: 16px;
-            background: #5453af;
+            background: #08e0fc;
             position: absolute;
             right: -8px;
             bottom: -4px;
@@ -106,44 +129,59 @@
             border-radius: 50%;
             box-shadow: 0 0 3px 2px #eee;
         }
-        .player .buttons{
+
+        .player .buttons {
             position: absolute;
             backdrop-filter: blur(10px);
             bottom: 0;
             border-top: 1px solid #ddd;
-            width:100%;
-            height:110px;
-            display:flex;
-            align-items:center;
-            justify-content:center;
+            width: 100%;
+            height: 110px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background: #797777;
         }
-        .player .buttons .button{
-            border: 1px solid #d51e1e;
+
+        .player .buttons .button {
+            border: 1px solid transparent;
             border-radius: 50%;
-            text-align:center;
-            margin:7px;
+            text-align: center;
+            margin: 15px;
             color: #333;
+            transition: 500ms;
         }
-        .player .buttons .button-small{
+
+        .player .buttons .button-small {
             width: var(--small);
             height: var(--small);
             line-height: var(--small);
+            font-size: 4em;
         }
-        .player .buttons .button-medium{
+
+        .player .buttons .button-medium {
             width: var(--medium);
             height: var(--medium);
             line-height: var(--medium);
-            font-size: 25px;
+            font-size: 4em;
         }
-        .player .buttons .button-large{
+
+        .player .buttons .button-large {
             width: var(--large);
             height: var(--large);
             line-height: var(--large);
-            font-size: 35px;
+            font-size: 4em;
+            transition: 500ms;
         }
-        .player .buttons .button-small:hover, .player .buttons .button-medium:hover, .player .buttons .button-large:hover{
-            background: #5453af;
+
+        .player .buttons .button-small:hover, .player .buttons .button-medium:hover, .player .buttons .button-large:hover {
+            background: #171717;
             color: #fff;
+            transition: 500ms;
+        }
+
+        .material-icons {
+            font-size: 46px;
         }
 
     </style>
@@ -188,12 +226,13 @@
             </div>
         </div>
         <div class="buttons">
-            <div class="button button-small"><i class="fas fa-random"></i></div>
-            <div class="button button-medium"><i class="fas fa-step-backward"></i></div>
-            <div class="button button-large" id="play" onclick="sendMusic()"><i class="material-icons">play_circle_filled</i></div>
+            <div class="button button-small"><i class="material-icons">volume_off</i></div>
+            <div class="button button-medium"><i class="material-icons">skip_previous</i></div>
+            <div class="button button-large" id="play" onclick="sendMusic()"><i class="material-icons">play_arrow</i>
+            </div>
             <div class="button button-large" id="stop" onclick="stopMusic()"><i class="material-icons">stop</i></div>
             <div class="button button-medium"><i class="material-icons">skip_next</i></div>
-            <div class="button button-small" id="mute"><i class="fas fa-volume-up"></i></div>
+            <div class="button button-small" id="mute"><i class="material-icons">volume_up</i></div>
         </div>
     </div>
 </div>
